--- a/diary/2013-07-10.md
+++ b/diary/2013-07-10.md
@@ -3,7 +3,335 @@
 
 > what's the #1 thing you want different about MGMM?
 
+afjsdkafksdfkjsf
 
+
+> what's the #2 next best thing you want different about MGMM?
+
+kskasdjkaskjsdfaf
+
+
+> what's the #1 thing you want different about this day, versus what it's going to be?
+
+
+
+
+> list the things you were planning on getting done or doing today:
+
+
+
+
+> if you could remove one of those items, what would it be?
+
+
+
+
+> if you could only do one of the items you listed originally, what would it be?
+
+
+
+
+> what are you going to do today to assure that you do NOT smoke in the middle of the day?
+
+
+
+
+> perhaps you'll leave the house today, between craving and about 4:30-5p. The craving can be your cue to go.
+
+
+
+
+> what do you do for fun?
+
+
+
+
+> what's the most exciting challenge you've ever worked on?
+
+
+
+
+> what would you ideally like to work on today?
+
+
+
+
+> how do you feel about doing those classes today?
+
+
+
+
+> which one appeals to you most, conceptually?
+
+
+
+
+> which one do you think you're probably gonna do first?
+
+
+
+
+> remember next steps on mgmm.
+
+
+
+
+> i know i know, the mantras system shoots to mind.
+
+
+
+
+> or is it the auto-multiplexed terminal? 
+
+
+
+
+> but first steps might be making a [clearscreen] command in our scripts
+
+
+
+
+> for dramatic pauses.
+
+
+
+
+> you probably want to distinguish text with color somehow. i'm not sure how urgent you feel that is.
+
+
+
+
+> [clearscreen]
+
+
+
+
+> what's something that really oughta get done today?
+
+
+
+
+> what's the other thing that really oughta get done today?
+
+
+
+
+> when are they gonna get done?
+
+
+
+
+> what's gonna happen after that?
+
+
+
+
+> [clearscreen]
+
+
+
+
+> what might be your motivation for learning cryptography?
+
+
+
+
+> what might be your motivation for learning how to make, or use, a mesh network?
+
+
+
+
+> what might be your motivation for a really intellectual collection of links and quotes?
+
+
+
+
+> (not a lot of work quite a lot of pussy eh? heh don't be pressured to write gold on each one bud just pick an interesting smathering and know how to make it look like you're presuming knowledge when you aren't actually... that's the wink wink nod nod that makes people feel smart and makes them like your shit as a result...and dont mind the predictions either....)
+
+
+
+
+> what might be your motivation for a "secure cloud" in which you keep your diary?
+
+
+
+
+> what might be your motivation for a hakyll-based essays blog?
+
+
+
+
+> what might be your motivation for making visual art, especially interactive visual art?
+
+
+
+
+> what might be your motivation for staying away from any kind of berkeley-ish work?
+
+
+
+
+> what might be your motivation for making music, drone music, etc?
+
+
+
+
+> [clearscreen]
+
+
+
+
+> what's something you'd REAALLY like to be able to do?
+
+
+
+
+> how long do you think it'd take you to learn how to do it?
+
+
+
+
+> what's something else you'd really like to be able to do?
+
+
+
+
+> how long do you think it'd take you to learn how to do it?
+
+
+
+
+> how about playing guitar with effect pedals?
+
+
+
+
+> how about making drones in ableton again?
+
+
+
+
+> how about a sexily theoretic physical hack project?
+
+
+
+
+> how about encryption and decryption? network security etc?
+
+
+
+
+> how about investing and watching the stock market on my linux laptop?
+
+
+
+
+> how about making visual art that can be disseminated over mass media like vimeo or webpages?
+
+
+
+
+> how about writing a tumblr-like blog - collecting links and quotes around certain themes - with my commentary inserted in the links? scattered with some images now and then but mostly very textual?
+
+
+
+
+> how does that compare to the idea of a hakyll blog, a combined writings/portfolio situation, in which i make longer posts in a similar, but looser, format? everything's just listed by name and that's it, then there's an about page.
+
+
+
+
+> what about something sexily practical, like the to-do list app with the spheres?
+
+
+
+
+> and what about these "cool skills" - 1337 skills - things like vim or knowing how parallel processing works, or how to debug code, or code this and this AI thing?
+
+
+
+
+> obviously all of these are great projects, but which one is best to do NOW, //this// summer? scroll up... think carefully...
+
+
+
+
+> [......clearscreen.....]
+
+
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> if you started today, do you think you could record vanlose station by friday?
+
+
+
+
+> do you think you could record 56 deg north by the time you go to montreal, if it's all you work on?
+
+
+
+
+> what's the long-term goal - for the end of the summer?
+
+
+
+
+> what's the goal for the end of this week?
+
+
+
+
+> what's the goal for the end of this day?
+
+
+
+
+> what's the goal for noon? what's the goal for 5pm?
+
+
+
+
+> what's 1 thing you could really do to make yourself //better// today?
+
+
+
+
+> once again: what's the goal for the time school starts?
+
+
+
+
+> once again: what's the goal for the end of the day?
+
+
+
+
+> okay. namaste nick.
+
+
+
+
+
+
+
+> what's the #1 thing you want different about MGMM?
+
+ajsdfkjasdfkjasdfjkaf
 
 
 > what's the #2 next best thing you want different about MGMM?
@@ -131,6 +459,56 @@
 
 
 
+> what might be your motivation for learning cryptography?
+
+
+
+
+> what might be your motivation for learning how to make, or use, a mesh network?
+
+
+
+
+> what might be your motivation for a really intellectual collection of links and quotes?
+
+
+
+
+> (not a lot of work quite a lot of pussy eh? heh don't be pressured to write gold on each one bud just pick an interesting smathering and know how to make it look like you're presuming knowledge when you aren't actually... that's the wink wink nod nod that makes people feel smart and makes them like your shit as a result...and dont mind the predictions either....)
+
+
+
+
+> what might be your motivation for a "secure cloud" in which you keep your diary?
+
+
+
+
+> what might be your motivation for a hakyll-based essays blog?
+
+
+
+
+> what might be your motivation for making visual art, especially interactive visual art?
+
+
+
+
+> what might be your motivation for staying away from any kind of berkeley-ish work?
+
+
+
+
+> what might be your motivation for making music, drone music, etc?
+
+
+
+
+> [clearscreen]
+
+
+
+
 > what's something you'd REAALLY like to be able to do?
 
 
@@ -222,6 +600,16 @@
 
 
 > ...
+
+
+
+
+> if you started today, do you think you could record vanlose station by friday?
+
+
+
+
+> do you think you could record 56 deg north by the time you go to montreal, if it's all you work on?
 
 
 
