--- a/diary/2013-07-16.md
+++ b/diary/2013-07-16.md
@@ -53,3 +53,176 @@ scheduling this med game business/sprint.    drones, researching drones.    mgmm
 
 > list other things that are really interesting you today
 
+drawing out the mgmm roadmap as i now see it.     doing "good business" with shaz.   looking at apartments with marco online.    my parents, their happiness
+
+
+> how does this sound:
+
+
+
+
+> draw out mgmm next steps
+
+
+
+
+> draw out some cool ideas on paper about drones
+
+
+
+
+> taksim viz, if there's time
+
+
+
+
+> what can keep you from smoking before sunset today?
+
+leaving when i have a bad enough craving.   no smoking tonight until the amp, guitar and input is set up and tested.
+
+
+> how will you enofrce a craving?
+
+leaving.
+
+
+> when yesterday did you enjoy yourself the most?
+
+probably standing around talking to ben and allegra
+
+
+> when yesterday did you enjoy yourself the least?
+
+either helping mom get stanley in... no - when i realized i had pushed dad away by not letting him watch me fix the macbook.
+
+
+> what's one thing you can do to make mgmm more intriguing/beautiful/appealing?
+
+i think it's all about the fullscreen urwid widget.
+
+
+> reminder about oblique strategies
+
+
+
+
+> reminder about [wisdom] tag in script to get random bits of wisdom injected from an extrnval file
+
+
+
+
+> the random text is probably a different color.
+
+
+
+
+> what do you think should come first:
+
+
+
+
+> making this system here better?
+
+
+
+
+> or making the awesome urwid screen?
+
+making the awesome urwid screen. i think it's time. this all is "good enough" and can wait for further perfectionism.   the major design goal is to make this into something i use ALL  DAY.   answering questions all day is alright  but what's better is reflecting all day and meditating all day. and not getting too caught up in this and that.  /// PERHAPS: THERE'S A MORNING  AND   EVENING.MGMM  SCRIPT AND COMPLEMENTARY COMMANDS - BOOM! MR GOOD MORNING MACHINE AND MR GOOD EVENING MACHINE!    AND BOTH ARE ACTUALLY BOUND TO BASH SCRIPTS THAT START TMUX AND DO ALL THAT SHIT AUTOMATICALY HAHAH!!!!!!!!!!!!1
+
+
+> if you worked on  only  one thing today (which may well be the case), what would it be?
+
+mgmm meditation. drones.
+
+
+> how do you feel about making drones with your guitar via ableton today/tonight? just you... alone in your room... all your shit set up.....?
+
+great. tonight ist he night.
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> how do you feel about yourself?
+
+i feel okay.  
+
+
+> what would you be if not exactly who you are?
+
+//more//.... more of an inventor (more accolades, more patents, more big work in big places).   more of like an astounding intellect behind a really relaxed calm veneer.  
+
+
+> why? why not you?
+
+good question..............i just want to be me in the future already. that's the idea behind working harder, isn't it? accelerate your momentum toward the future?
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> ...
+
+
+
+
+> what's the goal for the end of this day?
+
+a taksim viz all picked out. shaz is talked to, dealt with.  some drones research. an mgmm roadmap.
+
+
+> what's the goal for noon? 
+
+mgmm roadmap, shit all wrote down eh.
+
+
+> what's the goal for 5pm?
+
+see above.  drones come after.
+
+
+> once again: what's the goal for the time school starts?
+
+on my way to becoming an inventor...
+
+
+> once again: what's the goal for the end of the day?
+
+chiller inventor
+
+
+> how are you feeling now?
+
+good. better. ready.
+
+
+> get em good today eh 
+
+
+
+
