--- a/diary/2013-07-19.md
+++ b/diary/2013-07-19.md
@@ -3,17 +3,22 @@
 
 > what's the very first move on twirk?
 
-
+finding out how to represent and check geographic regions
 
 
 > now describe the next move.
 
-
+finding out how to allow users to define these regions.
 
 
 > what's a way to get better at making drones?
 
+go out and buy an effect pedal.
 
+
+> what's the most fun thing you can think to do or learn or make today?
+
+i'm not sure. maybe metal or drone musc. i can't motivate myself to program now for some reason.
 
 
 > selacon is as fun as the writing process
@@ -33,20 +38,25 @@
 
 > any thoughts?
 
-
+no. i think this is good advice. i certainly have enough fun things i've consumed etc. i think i will hold off till berkeley to go full out on it, but maybe it's even montreal? who knows.
 
 
 > talk about what you'll do for other people today.
 
-
+spend some time with dad after dinner, nick.
 
 
 > you'll do just one thing for 'work' (yourself) today. describe it, and what steps you'll take on it.
 
+okay. i will make a loop and jam over it. i will not get wrapped up in anything but the sound coming out of my speakers.
+
+
+> nick?
 
 
 
-> nick, be excellent today
+
+> be excellent today
 
 
 
